// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Visual editor inline editing should add overlay to DOM when clicked 1`] = `
<body>
  <h1
    contenteditable="true"
    data-cslp="all_fields.blt58a50b4cebae75c5.en-us.modular_blocks.0.block.single_line"
    data-cslp-field-type="singleline"
  />
  <div
    class="visual-editor__container"
    data-testid="visual-editor__container"
  >
    <div
      class="visual-editor__cursor"
      data-testid="visual-editor__cursor"
    />
    <div
      class="visual-editor__overlay__wrapper visible"
      data-testid="visual-editor__overlay__wrapper"
    >
      
        
      <div
        class="visual-editor__overlay visual-editor__overlay--top"
        data-testid="visual-editor__overlay--top"
        style="top: 0px; left: 0px; width: 100%; height: 0px;"
      />
      
        
      <div
        class="visual-editor__overlay visual-editor__overlay--left"
        data-testid="visual-editor__overlay--left"
        style="left: 0px; top: 0px; height: 0px; width: 0px;"
      />
      
        
      <div
        class="visual-editor__overlay visual-editor__overlay--right"
        data-testid="visual-editor__overlay--right"
        style="left: 0px; top: 0px; height: 0px; width: 1024px;"
      />
      
        
      <div
        class="visual-editor__overlay visual-editor__overlay--bottom"
        data-testid="visual-editor__overlay--bottom"
        style="top: 0px; height: 0px; left: 0px; width: 100%;"
      />
      
        
      <div
        class="visual-editor__overlay--outline"
        data-testid="visual-editor__overlay--outline"
        style="top: 0px; height: 0px; width: 0px; left: 0px;"
      />
      
    
    </div>
  </div>
</body>
`;

exports[`Visual editor on click, the sdk inline elements must be contenteditable file should render a replacer and remove when it is not 1`] = `
<h1
  data-cslp="all_fields.blt58a50b4cebae75c5.en-us.file"
  data-cslp-field-type="file"
/>
`;

exports[`Visual editor on click, the sdk inline elements must be contenteditable file should render a replacer and remove when it is not 2`] = `undefined`;

exports[`Visual editor on click, the sdk inline elements must be contenteditable multi line should be contenteditable 1`] = `
<h1
  contenteditable="true"
  data-cslp="all_fields.blt58a50b4cebae75c5.en-us.multi_line"
  data-cslp-field-type="multiline"
/>
`;

exports[`Visual editor on click, the sdk inline elements must be contenteditable single line should be contenteditable 1`] = `
<h1
  contenteditable="true"
  data-cslp="all_fields.blt58a50b4cebae75c5.en-us.single_line"
  data-cslp-field-type="singleline"
/>
`;

exports[`Visual editor on click, the sdk should do nothing if data-cslp not available 1`] = `
<body>
  <h1 />
  <div
    class="visual-editor__container"
    data-testid="visual-editor__container"
  >
    <div
      class="visual-editor__cursor"
      data-testid="visual-editor__cursor"
    />
    <div
      class="visual-editor__overlay__wrapper"
      data-testid="visual-editor__overlay__wrapper"
    >
      
        
      <div
        class="visual-editor__overlay visual-editor__overlay--top"
        data-testid="visual-editor__overlay--top"
      />
      
        
      <div
        class="visual-editor__overlay visual-editor__overlay--left"
        data-testid="visual-editor__overlay--left"
      />
      
        
      <div
        class="visual-editor__overlay visual-editor__overlay--right"
        data-testid="visual-editor__overlay--right"
      />
      
        
      <div
        class="visual-editor__overlay visual-editor__overlay--bottom"
        data-testid="visual-editor__overlay--bottom"
      />
      
        
      <div
        class="visual-editor__overlay--outline"
        data-testid="visual-editor__overlay--outline"
      />
      
    
    </div>
  </div>
</body>
`;

exports[`Visual editor should append a visual editor container to the DOM 1`] = `
<div
  class="visual-editor__container"
  data-testid="visual-editor__container"
>
  <div
    class="visual-editor__cursor"
    data-testid="visual-editor__cursor"
  />
  <div
    class="visual-editor__overlay__wrapper"
    data-testid="visual-editor__overlay__wrapper"
  >
    
        
    <div
      class="visual-editor__overlay visual-editor__overlay--top"
      data-testid="visual-editor__overlay--top"
    />
    
        
    <div
      class="visual-editor__overlay visual-editor__overlay--left"
      data-testid="visual-editor__overlay--left"
    />
    
        
    <div
      class="visual-editor__overlay visual-editor__overlay--right"
      data-testid="visual-editor__overlay--right"
    />
    
        
    <div
      class="visual-editor__overlay visual-editor__overlay--bottom"
      data-testid="visual-editor__overlay--bottom"
    />
    
        
    <div
      class="visual-editor__overlay--outline"
      data-testid="visual-editor__overlay--outline"
    />
    
    
  </div>
</div>
`;

exports[`visual editor DOM should have an overlay over the element 1`] = `
<div
  class="visual-editor__overlay__wrapper"
  data-testid="visual-editor__overlay__wrapper"
>
  
        
  <div
    class="visual-editor__overlay visual-editor__overlay--top"
    data-testid="visual-editor__overlay--top"
  />
  
        
  <div
    class="visual-editor__overlay visual-editor__overlay--left"
    data-testid="visual-editor__overlay--left"
  />
  
        
  <div
    class="visual-editor__overlay visual-editor__overlay--right"
    data-testid="visual-editor__overlay--right"
  />
  
        
  <div
    class="visual-editor__overlay visual-editor__overlay--bottom"
    data-testid="visual-editor__overlay--bottom"
  />
  
        
  <div
    class="visual-editor__overlay--outline"
    data-testid="visual-editor__overlay--outline"
  />
  
    
</div>
`;

exports[`visual editor DOM should have an overlay over the element 2`] = `
<div
  class="visual-editor__overlay__wrapper visible"
  data-testid="visual-editor__overlay__wrapper"
>
  
        
  <div
    class="visual-editor__overlay visual-editor__overlay--top"
    data-testid="visual-editor__overlay--top"
    style="top: 0px; left: 0px; width: 100%; height: 10px;"
  />
  
        
  <div
    class="visual-editor__overlay visual-editor__overlay--left"
    data-testid="visual-editor__overlay--left"
    style="left: 0px; top: 10px; width: 10px;"
  />
  
        
  <div
    class="visual-editor__overlay visual-editor__overlay--right"
    data-testid="visual-editor__overlay--right"
    style="left: 20px; top: 10px; width: 1004px;"
  />
  
        
  <div
    class="visual-editor__overlay visual-editor__overlay--bottom"
    data-testid="visual-editor__overlay--bottom"
    style="top: 20px; height: -20px; left: 0px; width: 100%;"
  />
  
        
  <div
    class="visual-editor__overlay--outline"
    data-testid="visual-editor__overlay--outline"
    style="top: 10px; left: 10px;"
  />
  
    
</div>
`;
